--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,5 +31,5 @@
             android:value="2" />
         <meta-data android:name="asset_statements" android:resource="@string/asset_statements" />
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
